--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "10.4.15",
     "eslint": "^9",
     "eslint-config-next": "15.2.5",
+    "postcss": "8.4.28",
+    "tailwindcss": "3.3.3",
     "typescript": "^5"
   }
 }
